<resources>
    <string name="app_name">GTA - IOT House BT Controller</string>
    <string name="second_floor">Second Floor</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_00">00</string>
    <string name="_01">01</string>
    <string name="first_floor">First Floor</string>
    <string name="door">Door</string>
    <string name="security">Security</string>
    <string name="pir">PIR</string>
    <string name="laser">Laser</string>
    <string name="garage">Garage</string>
    <string name="star">*</string>
    <string name="pound">#</string>
</resources>
